# form_data_webapp

./: main.py  pyproject.toml
notes/: client.sh  server.sh
web_form/: __main__.py
web_form/api/: __init__.py
www/: form.html
